# aurora_vision

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: chess_shape.xml  filter.cpp  filter.h  guilano_aurora_vision.pro  h_shape.xml  heart.xml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygon.cpp  polygon.h  source.qrc
src/polygon/: chess_shape.cpp  chess_shape.h  circle.cpp  circle.h  h_shape.cpp  h_shape.h  heart.cpp  heart.h  pentagon.cpp  pentagon.h  square.cpp  square.h  star.cpp  star.h  triangle.cpp  triangle.h
